# RQrive

./: .gitignore  LICENSE  README.md  app.spec  pyproject.toml
src/RQrive/: FileDownloader.py  MainWindow.py  Webview.py  __init__.py  __main__.py  api.py
